revision de código

--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,5 @@ body {
   margin: 10px 0;
   font-size: 16px;
 }
+
+/* Uso la opción de format document con frecuencia, probablemente también cambié el acomodo de las líneas como consecuencia */
